--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -299,6 +299,7 @@ CP14ClothingOuterClothingCuirassLeg: CP14ArmorIronCuirass
 CP14BrassChest: CP14WoodenChest
 CP14BrassChestFilledEnergyCrystals: CP14WoodenChestFilledEnergyCrystals
 CP14BrassChestFilledAlchemy: CP14WoodenChestFilledAlchemy
+CP14BrassChestFilledCheese: CP14WoodenChestFilledCheese
 CP14BrassChestFilledSmallHealingBrute: CP14WoodenChestFilledSmallHealingBrute
 CP14BrassChestFilledSmallHealingPoison: CP14WoodenChestFilledSmallHealingPoison
 CP14BrassChestFilledSmallHealingAirloss: CP14WoodenChestFilledSmallHealingAirloss
