--- a/Resources/Maps/_CP14/factoria.yml
+++ b/Resources/Maps/_CP14/factoria.yml
@@ -61133,21 +61133,21 @@ entities:
     - type: Transform
       pos: -36.414806,-12.267424
       parent: 2
-- proto: CP14BrassChest
+- proto: CP14WoodenChest
   entities:
   - uid: 14420
     components:
     - type: Transform
       pos: -5.5,-23.5
       parent: 2
-- proto: CP14BrassChestFilledFarmSeeds
+- proto: CP14WoodenChestFilledFarmSeeds
   entities:
   - uid: 14548
     components:
     - type: Transform
       pos: 8.5,38.5
       parent: 2
-- proto: CP14BrassChestFilledWood
+- proto: CP14WoodenChestFilledWood
   entities:
   - uid: 13198
     components:
