--- a/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sylphoria/buy.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/Store/Sylphoria/buy.yml
@@ -3,7 +3,7 @@
   code: SCROLL_RESURRECTION
   price: 100
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellScrollResurrection
 
@@ -12,7 +12,7 @@
   code: CURE_WOUNDS
   price: 100
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellScrollCureWounds
     count: 5
@@ -22,7 +22,7 @@
   code: CURE_BURN
   price: 100
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellScrollCureBurn
     count: 5
@@ -32,7 +32,7 @@
   code: BLOOD_PURE
   price: 100
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellScrollBloodPurification
     count: 5
@@ -42,7 +42,7 @@
   code: SIGNAL_BLUE
   price: 50
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellscrollSignalLightBlue
     count: 5
@@ -52,7 +52,7 @@
   code: SIGNAL_YELLOW
   price: 50
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellscrollSignalLightYellow
     count: 5
@@ -62,7 +62,7 @@
   code: SIGNAL_RED
   price: 50
   factions:
-  - SpiceStream
+  - Sylphoria
   service: !type:CP14BuyItemsService
     product: CP14SpellscrollSignalLightRed
     count: 5
