--- a/Resources/Prototypes/_CP14/Entities/Structures/Floor/floorLava.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Floor/floorLava.yml
@@ -38,6 +38,8 @@
   - type: IconSmooth
     shader: unshaded
     key: CP14Lava
+    additionalKeys:
+    - CP14wall
     base: water
   - type: Physics
     bodyType: Static
