--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/carcat.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/carcat.yml
@@ -25,6 +25,17 @@
     requiredLegs: 2
   - type: Inventory
     templateId: CP14Human
+  - type: Hands
+    leftHandDisplacement:
+      sizeMaps:
+        32:
+          sprite: _CP14/Mobs/Species/Carcat/displacement.rsi
+          state: hands_left
+    rightHandDisplacement:
+      sizeMaps:
+        32:
+          sprite: _CP14/Mobs/Species/Carcat/displacement.rsi
+          state: hands_right
 
 - type: entity
   parent: CP14BaseSpeciesDummy
@@ -35,3 +46,14 @@
     species: CP14Carcat
   - type: Inventory
     templateId: CP14Human
+  - type: Hands
+    leftHandDisplacement:
+      sizeMaps:
+        32:
+          sprite: _CP14/Mobs/Species/Carcat/displacement.rsi
+          state: hands_left
+    rightHandDisplacement:
+      sizeMaps:
+        32:
+          sprite: _CP14/Mobs/Species/Carcat/displacement.rsi
+          state: hands_right
