--- a/Resources/Maps/_CP14/factoria.yml
+++ b/Resources/Maps/_CP14/factoria.yml
@@ -69046,7 +69046,7 @@ entities:
         head: !type:ContainerSlot
           showEnts: False
           occludes: False
-          ent: 471
+          ent: null
         keys: !type:ContainerSlot
           showEnts: False
           occludes: False
