--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/alchemist.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/alchemist.yml
@@ -53,7 +53,7 @@
 # Belt
 
 - type: loadoutGroup
-  id: CP14AlchemistCloak
+  id: CP14AlchemistBelt
   name: cp14-loadout-alchemist-belt
   loadouts:
   - CP14ClothingBeltPouchPotions
