--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/unique_loot.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/unique_loot.yml
@@ -4,8 +4,8 @@
   parent: MarkerBase
   categories: [ ForkFiltered, DoNotMap ]
   components:
-  - type: CP14UniqueLootSpawner
-    tag: CP14UniqueSpawnDemiplanetLoot
+  #- type: CP14UniqueLootSpawner
+  #  tag: CP14UniqueSpawnDemiplanetLoot
   - type: Sprite
     layers:
     - sprite: Markers/cross.rsi
